--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+---
+layout: default
+title: Home
+---
+
+Hello, World! Musings
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      {{ post.excerpt }}
+    </li>
+  {% endfor %}
+</ul>
