--- a/about.html
+++ b/about.html
@@ -3,8 +3,34 @@ layout: default
 title: About
 ---
 
-About this site
+<div class="row">
+	<div class="col-md-12">
+		<h1>
+			{{ page.title }}
+		</h1>
+	</div>
+</div>
 
-<p>This site is meant for my scribbles. Views expressed here are my own.</p>
+<div class="row">
+	<div class="col-md-12">
+		<p>
+			Hi, I&apos;m Tiese Barrell and this is my personal blog, where I post occasionally, mainly about technical things
+			that I&apos;m working with or on. Here are some other places I can be found:
+		</p>
+		
+		<p>
+			<a href="https://twitter.com/tiesebarrell" class="btn btn-primary">Twitter</a>
+			<a href="http://nl.linkedin.com/in/tiesebarrell" class="btn btn-primary">LinkedIn</a>
+			<a href="https://plus.google.com/+TieseBarrell" class="btn btn-primary">Google+</a>
+			<a href="https://github.com/tiesebarrell" class="btn btn-primary">Github</a>
+			<a href="http://mazidea.com" class="btn btn-primary">Mazidea</a>
+			<a href="http://toxos.org" class="btn btn-primary">Toxos</a>
+		</p>
+		
+		<p>
+			Thanks to the communities of <a href="http://jekyllrb.com">Jekyll</a> and <a href="http://getbootstrap.com">Bootstrap</a> for creating the essentials this site runs on. 
+			Original artwork attribution for the quill logo: <a href="http://www.pond5.com/artist/romvo79">romvo79</a>.
+		</p>
+	</div>
+</div>
 
-<p>Lala</p> 
