--- a/posts.html
+++ b/posts.html
@@ -1,13 +1,7 @@
 ---
-layout: posts
+layout: default
 title: All Posts
 ---
+<h1>All Posts</h1>
 
-{% for post in site.posts %}
-<div class="row">
-	<div class="col-md-12">
-		{{ post.date | date_to_long_string}}&nbsp;
-		<a href="{{ post.url }}">{{ post.title }}</a>
-	</div>
-</div>
-{% endfor %}
+{% include postlist.html posts=site.posts %}
