--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
       		<a href="{{ post.url }}">{{ post.title }}</a>
      	</h2>
       <p class="content">
-     	  {{ post.excerpt | remove: '<p>' | remove: '</p>'}}
+     	  {{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>'}}
       </p>
     </div>
 </div>
