Setting up new look.

--- a/about.html
+++ b/about.html
@@ -32,17 +32,12 @@ title: About
 			Thanks to the communities of <a href="http://jekyllrb.com">Jekyll</a>, <a href="http://getbootstrap.com">Bootstrap</a> and <a href="http://lesscss.org/">Less</a> for creating the essentials this site runs on. 
 		</p>
 
-		<p class="content">
-			Original artwork attribution for the quill logo: <a href="http://www.pond5.com/artist/romvo79">romvo79</a>.
-		</p>
-
-		<div class="btn-group btn-group-justified">
-			<a href="https://twitter.com/tiesebarrell" class="btn btn-default btn-block"><i class="fa fa-twitter">&nbsp;</i>Twitter</a>
-			<a href="http://nl.linkedin.com/in/tiesebarrell" class="btn btn-default btn-block"><i class="fa fa-linkedin">&nbsp;</i>LinkedIn</a>
-			<a href="https://plus.google.com/+TieseBarrell" class="btn btn-default btn-block"><i class="fa fa-google-plus">&nbsp;</i>Google+</a>
-			<a href="https://github.com/tiesebarrell" class="btn btn-default btn-block"><i class="fa fa-github">&nbsp;</i>Github</a>
-			<a href="http://mazidea.com" class="btn btn-default btn-block"><i class="fa fa-cloud">&nbsp;</i>Mazidea</a>
-			<a href="http://toxos.org" class="btn btn-default btn-block"><i class="fa fa-cloud">&nbsp;</i>Toxos</a>
+		<div>
+			<a href="https://twitter.com/tiesebarrell"><i class="fas fa-user">&nbsp;</i>Twitter</a>&nbsp;
+			<a href="http://nl.linkedin.com/in/tiesebarrell"><i class="fas fa-user">&nbsp;</i>LinkedIn</a>&nbsp;
+			<a href="https://github.com/tiesebarrell"><i class="fas fa-user">&nbsp;</i>Github</a>&nbsp;
+			<a href="http://mazidea.com"><i class="fas fa-cloud">&nbsp;</i>Mazidea</a>&nbsp;
+			<a href="http://toxos.org"><i class="fas fa-cloud">&nbsp;</i>Toxos</a>
 		</div>
 
 	</div>
