--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 {% for post in site.posts limit:5 %}
-<div class="row" style="background-color: #f7f7f7">
-    <div class="col-md-12">
+<div class="row post-summary" style="background-color: #f7f7f7">
+    <div class="col-md-12 post-summary-content">
     	<h2>
       		<a href="{{ post.url }}">{{ post.title }}</a>
      	</h2>
@@ -12,15 +12,13 @@ layout: default
      	  {{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>'}}
       </p>
     </div>
-</div>
-<div class="row">
-	<div class="col-md-6 small">
-    	Posted {{ post.date | date_to_long_string }} in {{ post.tags | array_to_sentence_string }}
-    </div>
-    <div class="col-md-6 small">
-    	<p class="pull-right">
-    		<a href="{{ post.url }}"><span class="glyphicon glyphicon-log-out">&nbsp;</span>Read more</a>
-    	</p>
-    </div>
+	<div class="col-md-6 small post-summary-bar">
+		Posted {{ post.date | date_to_long_string }} in {{ post.tags | array_to_sentence_string }}
+	</div>
+	<div class="col-md-6 small post-summary-bar">
+		<p class="pull-right">
+			<a href="{{ post.url }}"><i class="fas fa-chevron-circle-right">&nbsp;</i>Read more</a>
+		</p>
+	</div>
 </div>
 {% endfor %}
