--- a/about.html
+++ b/about.html
@@ -2,44 +2,33 @@
 layout: page
 title: About
 ---
-
 <div class="row">
-	<div class="col-md-12">
+	<div class="col">
 		<h1>
 			{{ page.title }}
 		</h1>
-	</div>
-</div>
 
-<div class="row">
-	<div class="col-md-10">
-		<p class="content">
-			Hi, I&apos;m Tiese Barrell and this is my personal blog, where I post occasionally, mainly about technical things
-			that I&apos;m working with or on. Below you can find links to some other places I can be found.
-		</p>
-	</div>
-	<div class="col-md-1">	
-	</div>
-	<div class="col-md-1">
-		<img class="media-object profile pull-right" src="/assets/images/profile-picture.jpg" alt="Tiese Barrell" />
-	</div>
-</div>
+		<img class="media-object profile float-lg-right d-none d-lg-block" src="/assets/images/profile-picture.jpg" alt="Tiese Barrell" />
 
-<div class="row">
-	<div class="col-md-12">
-		
-		<p class="content">
-			Thanks to the communities of <a href="http://jekyllrb.com">Jekyll</a>, <a href="http://getbootstrap.com">Bootstrap</a> and <a href="http://lesscss.org/">Less</a> for creating the essentials this site runs on. 
+		<p>
+			Hi, I&apos;m Tiese Barrell and this is my personal blog, where I post occasionally. Most of my posts are about technical things
+			that I&apos;m working with or on. Below you can find links to some other places I can be found online.
 		</p>
 
-		<div>
-			<a href="https://twitter.com/tiesebarrell"><i class="fas fa-user">&nbsp;</i>Twitter</a>&nbsp;
-			<a href="http://nl.linkedin.com/in/tiesebarrell"><i class="fas fa-user">&nbsp;</i>LinkedIn</a>&nbsp;
-			<a href="https://github.com/tiesebarrell"><i class="fas fa-user">&nbsp;</i>Github</a>&nbsp;
-			<a href="http://mazidea.com"><i class="fas fa-cloud">&nbsp;</i>Mazidea</a>&nbsp;
-			<a href="http://toxos.org"><i class="fas fa-cloud">&nbsp;</i>Toxos</a>
-		</div>
+		<p>
+			Thanks to the communities of <a href="http://jekyllrb.com">Jekyll</a>, <a href="http://getbootstrap.com">Bootstrap</a> and <a href="http://lesscss.org/">Less</a> for creating the essentials this site runs on.
+		</p>
 
+		<p class="about-badges">
+			<a href="https://twitter.com/tiesebarrell">
+				<i class="fab fa-twitter-square">&nbsp;</i>
+			</a>
+			<a href="http://nl.linkedin.com/in/tiesebarrell">
+				<i class="fab fa-linkedin">&nbsp;</i>
+			</a>
+			<a href="https://github.com/tiesebarrell">
+				<i class="fab fa-github-square">&nbsp;</i>
+			</a>
+		</p>
 	</div>
 </div>
-
